@@ -1,6 +1,5 @@
 package com.orbit.controller.supplier;
 
-import com.orbit.constant.SupplierStatus;
 import com.orbit.dto.supplier.SupplierApprovalDto;
 import com.orbit.dto.supplier.SupplierRegistrationRequestDto;
 import com.orbit.dto.supplier.SupplierRegistrationResponseDto;
@@ -9,67 +8,65 @@ import com.orbit.service.supplier.SupplierRegistrationService;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
+import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.*;
+import org.springframework.web.multipart.MultipartFile;
 
 import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
 
 @RestController
-@RequestMapping("/api/supplier-registrations")  // 경로를 Security Config와 일치시킴
+@RequestMapping("/api/supplier-registrations") // 기본 경로 유지
 @RequiredArgsConstructor
+@PreAuthorize("hasAnyRole('ADMIN', 'SUPPLIER')") // 클래스 레벨 공통 권한 설정
 public class SupplierRegistrationController {
+
     private final SupplierRegistrationService supplierRegistrationService;
 
-    // ✅ 협력업체 목록 조회 (ADMIN만 접근 가능)
-    //@PreAuthorize("hasRole('ADMIN')")
-    @GetMapping
-    public ResponseEntity<?> getSuppliers(@RequestParam(required = false) String status) {
+    // 🟢 협력업체 목록 조회
+    @GetMapping("")
+    public ResponseEntity<List<SupplierRegistrationResponseDto>> getSuppliers(
+            @RequestParam(required = false) String status) {
+
         try {
-            System.out.println("🔍 API 호출됨: /api/supplier-registrations, 상태값: " + status);
-
             List<SupplierRegistration> suppliers;
-
             if (status == null || status.isEmpty()) {
-                System.out.println("✅ status 값 없음 → 전체 데이터 조회");
                 suppliers = supplierRegistrationService.getSuppliers(null);
             } else {
-                // 유효한 status 값 검증 (PENDING, APPROVED, REJECTED, SUSPENDED, BLACKLIST)
-                if (!Arrays.asList("PENDING", "APPROVED", "REJECTED", "SUSPENDED", "BLACKLIST").contains(status.toUpperCase())) {
-                    return ResponseEntity.badRequest().body("❌ 잘못된 상태 값입니다. (PENDING, APPROVED, REJECTED, SUSPENDED, BLACKLIST 중 하나여야 함)");
+                if (!Arrays.asList("PENDING", "APPROVED", "REJECTED", "SUSPENDED", "BLACKLIST")
+                        .contains(status.toUpperCase())) {
+                    return ResponseEntity.badRequest().body(List.of());
                 }
                 suppliers = supplierRegistrationService.getSuppliers(status.toUpperCase());
             }
-
-            System.out.println("✅ 조회된 협력업체 수: " + suppliers.size());
-
             List<SupplierRegistrationResponseDto> response = suppliers.stream()
                     .map(SupplierRegistrationResponseDto::fromEntity)
                     .collect(Collectors.toList());
-
             return ResponseEntity.ok(response);
         } catch (Exception e) {
-            System.err.println("❌ 서버 오류 발생: " + e.getMessage());
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
-                    .body("❌ 서버 오류 발생: " + e.getMessage());
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(List.of());
         }
     }
 
-    // ✅ 협력업체 상세 조회 (ADMIN만 접근 가능)
-    //@PreAuthorize("hasRole('ADMIN')")
-    @GetMapping("/{id}")
+    // 🟢 협력업체 상세 조회
+    @GetMapping("/detail/{id}")
     public ResponseEntity<SupplierRegistrationResponseDto> getSupplier(@PathVariable Long id) {
         SupplierRegistration supplier = supplierRegistrationService.getSupplierById(id);
         return ResponseEntity.ok(SupplierRegistrationResponseDto.fromEntity(supplier));
     }
 
-    // ✅ 협력업체 등록 요청 (SUPPLIER만 가능)
-    //@PreAuthorize("hasRole('SUPPLIER')")
-    @PostMapping
+    // 🟢 협력업체 등록 (SUPPLIER 전용)
+    @PostMapping(
+            value = "/register",
+            consumes = MediaType.MULTIPART_FORM_DATA_VALUE
+    ) // 명시적 하위 경로 추가
+    @PreAuthorize("hasRole('SUPPLIER')") // 메소드 레벨 권한 재정의
     public ResponseEntity<SupplierRegistrationResponseDto> registerSupplier(
-            @Valid @ModelAttribute SupplierRegistrationRequestDto requestDto) {
+            @Valid @ModelAttribute SupplierRegistrationRequestDto requestDto,
+            @RequestPart("businessFile") MultipartFile businessFile) { // 파일 파라미터 명시
 
         SupplierRegistration registration = supplierRegistrationService.registerSupplier(
                 requestDto.getSupplierId(),
@@ -82,17 +79,19 @@ public class SupplierRegistrationController {
                 requestDto.getPhoneNumber(),
                 requestDto.getHeadOfficeAddress(),
                 requestDto.getComments(),
-                requestDto.getBusinessFile()
+                businessFile // 파일 파라미터 직접 전달
         );
-
-        return ResponseEntity.ok(SupplierRegistrationResponseDto.fromEntity(registration));
+        return ResponseEntity.status(HttpStatus.CREATED)
+                .body(SupplierRegistrationResponseDto.fromEntity(registration));
     }
 
-    // ✅ 협력업체 승인/거절 처리 (ADMIN만 가능)
-    //@PreAuthorize("hasRole('ADMIN')")
-    @PutMapping("/{id}/status")
-    public ResponseEntity<Void> updateSupplierStatus(@PathVariable Long id,
-                                                     @Valid @RequestBody SupplierApprovalDto requestDto) {
+    // 🟢 상태 업데이트 (ADMIN 전용)
+    @PutMapping("/status/{id}") // 경로 구조 변경
+    @PreAuthorize("hasRole('ADMIN')")
+    public ResponseEntity<Void> updateSupplierStatus(
+            @PathVariable Long id,
+            @Valid @RequestBody SupplierApprovalDto requestDto) {
+
         switch(requestDto.getStatusCode().toUpperCase()) {
             case "REJECTED":
                 supplierRegistrationService.rejectSupplier(id, requestDto.getRejectionReason());
@@ -107,8 +106,8 @@ public class SupplierRegistrationController {
                 supplierRegistrationService.blacklistSupplier(id, requestDto.getRejectionReason());
                 break;
             default:
-                throw new IllegalArgumentException("지원하지 않는 상태 코드입니다.");
+                throw new IllegalArgumentException("Invalid status code");
         }
-        return ResponseEntity.ok().build();
+        return ResponseEntity.noContent().build();
     }
 }
